--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- home
     ================================================== -->
-    <section id="home" class="jumbotron home-sec">
+    <div id="home" class="jumbotron home-sec">
 
       <div class="socials">
         <i class="hovicon effect-4 fab fa-linkedin-in"></i>
@@ -67,18 +67,18 @@
         </a>
       </div>
 
-    </section> <!-- end home-sec -->
+    </div> <!-- end home-sec -->
 
     <!-- about
     ================================================== -->
 
-    <section class="jumbotron photo-me">
+    <div class="jumbotron photo-me">
       <div class="container heading1">
         <h1>I'm</h1>
       </div>
-    </section>
+    </div>
 
-    <section class="jumbotron about">
+    <div class="jumbotron about">
       <div class="col-sm heading2">
         <h1>KYLE</h1>
       </div>
@@ -98,91 +98,51 @@
           WHEN I'M NOT TYPING AWAY AT MY COMPUTER I'M CREATING ART, WATCHING MR ROBOT OR TAKING MY DOG FOR A WALK.
         </p>
       </div>
-    </section>
+    </div>
 
 
     <!-- works
     ================================================== -->
-    <section id="site-content">
-      <section  id="projects" class="works-sec">
+    <div id="site-content">
+      <div  id="projects" class="works-sec">
 
         <div class="container works-wrap">
           <h2>PROJECTS</h2>
-        </div> <!-- end intro-wrap -->
+        </div> <!-- end works-wrap -->
 
         <div class="works-wrap-two">
           <p>
             I LOVE WHAT I DO THESE, ARE<br />
             SOME OF MY LATEST PROJECTS.
           </p>
-        </div>
+        </div> <!-- end works-wrap-two -->
 
-        <div class="col-sm projects">
-          <div class="row">
-            <figure class="col-sm snip" id="project1"><img src="images/p1.png" alt="project1"/>
-              <figcaption>
-                <h5>Mini Game</h5>
-                <button>Learn More</button>
-              </figcaption><a href="#"></a>
-            </figure>
-            <figure class="col-sm snip" id="project2"><img src="images/p2.png" alt="project2"/>
-              <figcaption>
-                <h5>Mini Game</h5>
-                <button>Learn More</button>
-              </figcaption><a href="#"></a>
-            </figure>
-            <figure class="col-sm snip" id="project3"><img src="images/p3.png" alt="project3"/>
-              <figcaption>
-                <h5>Informational</h5>
-                <button>Learn More</button>
-              </figcaption><a href="#"></a>
-            </figure>
+        <!--- HOME PROJECTS --->
+        <div class="row">
+          <div class="col-md-3 col-xs-12">
+
           </div>
-          <div class="row">
-            <figure class="col-sm snip" id="project4"><img src="images/p4.png" alt="project4"/>
-              <figcaption>
-                <h5>Informational</h5>
-                <button>Learn More</button>
-              </figcaption><a href="#"></a>
-            </figure>
-            <figure class="col-sm snip" id="project5"><img src="images/p5.png" alt="project5"/>
-              <figcaption>
-                <h5>Template</h5>
-                <button>Learn More</button>
-              </figcaption><a href="#"></a>
-            </figure>
-            <figure class="col-sm snip" id="project6"><img src="images/p6.png" alt="project6"/>
-              <figcaption>
-                <h5>Template</h5>
-                <button>Learn More</button>
-              </figcaption><a href="#"></a>
-            </figure>
-          </div>
-          <div class="row">
-            <figure class="col-sm snip" id="project7"><img src="images/p7.png" alt="project7"/>
-              <figcaption>
-                <h5>Dashboard</h5>
-                <button>Learn More</button>
-              </figcaption><a href="#"></a>
-            </figure>
-            <figure class="col-sm snip" id="project8"><img src="images/p8.png" alt="project8"/>
-              <figcaption>
-                <h5>Directory</h5>
-                <button>Learn More</button>
-              </figcaption><a href="#"></a>
-            </figure>
-            <figure class="col-sm snip" id="project9"><img src="images/p9.png" alt="project9"/>
-              <figcaption>
-                <h5>Gallery</h5>
-                <button>Learn More</button>
-              </figcaption><a href="#"></a>
-            </figure>
+
+          <div class="prjct col-md-9 col-xs-12">
+            <div class="prjct-bg" >
+              <a href="singleproject.html"> <img src="images/d1.jpg" alt="" class="img-prjct"> </a>
+              <div class="prjct-wrt-right"> Project Title </div>
+            </div>
           </div>
         </div>
 
-      </section> <!-- end works-sec -->
+        <div class="row">
+          <div class="prjct col-md-9 col-xs-12">
+            <div class="prjct-bg" >
+              <a href="singleproject.html"> <img src="images/d1.jpg" alt="" class="img-prjct"> </a>
+              <div class="prjct-wrt-left"> Project Title </div>
+            </div>
+          </div>
+        </div>
+        <!--- THE END HOME PROJECTS --->
 
-    </section> <!-- end site-content -->
+      </div> <!-- end works-sec -->
+    </div> <!-- end site-content -->
 
     <!-- skills
     ================================================== -->
@@ -204,7 +164,7 @@
           <i class="fab fa-git"></i>
           <i class="devicon-bootstrap-plain"></i>
           <i class="devicon-jquery-plain"></i>
-          <i class="devicon-illustrator-plain"></i>
+          <i class="devicon-wordpress-plain"></i>
         </div>
       </div>
 
@@ -214,28 +174,35 @@
     ================================================== -->
     <footer id="site-footer" class="jumbotron footer-sec">
 
-      <div class="row footer-scroll">
-        <div class="col-sm">
-          <a href="#top" class="smoothscroll">
-            <i class="fas fa-long-arrow-alt-up faa-bounce animated arrow2"></i>
-          </a>
-        </div>
-      </div> <!-- end footer-scroll -->
+      <!--- FOOTER --->
+      <div class="container">
+        <div class="row">
+          <div class="footer-bg" >
+            <div class="col-md-4 col-xs-12">
+              <div class="shw-cs3"> Get in Touch </div>
+              <a href="mailto:hello@yoursite"> <div class="ftr-lnk"> hello@yoursite </div> </a>
+            </div>
 
-      <div class="row footer-about">
-        <div class="col-sm">
-          Web developer,<br> autodidact, problem solver.<br>
-          I love art and function.<br>
-          Just an all-round creator.
-        </div>
-      </div> <!-- end footer-about -->
+            <div class="col-md-4 col-xs-6">
+              <a target="_blank" href="http://twitter.com/"> <div class="ftr-lnk"> Twitter </div> </a>
+              <a target="_blank" href="http://instagram.com/"> <div class="ftr-lnk"> Instagram </div> </a>
+              <a target="_blank" href="http://pinterest.com/"> <div class="ftr-lnk"> Pinterest </div> </a>
+              <a target="_blank" href="http://dribbble.com/"> <div class="ftr-lnk"> Dribbble </div> </a>
+              <a target="_blank" href="http://linkedin.com/"> <div class="ftr-lnk"> Linkedin </div> </a>
+            </div>
 
-      <div class="row footer-copyright">
-        <div class="col-sm copyright">
-          <span>© Copyright <a href="https://github.com/King-Kyle">Kyle King</a> 2018.</span><br>
-          <span>Powered by <i class="fas fa-coffee"></i> and <i class="fas fa-code"></i>.</span>
+            <div class="col-md-4 col-xs-6">
+              <div class="ftr-lnk-on"> Home </div>
+              <a href="works.html"> <div class="ftr-lnk"> Works </div> </a>
+              <a href="logos.html"> <div class="ftr-lnk"> Logos </div> </a>
+              <a href="about.html"> <div class="ftr-lnk"> About & Contact </div> </a>
+              <a href="blog.html"> <div class="ftr-lnk"> Blog </div> </a>
+            </div>
+
+          </div>
         </div>
-      </div> <!-- end footer-copyright -->
+      </div>
+      <!--- THE END FOOTER --->
 
     </footer> <!-- end footer-sec -->
   </div> <!-- end wrapper -->
