--- a/index.html
+++ b/index.html
@@ -175,31 +175,34 @@
     <footer id="site-footer" class="jumbotron footer-sec">
 
       <!--- FOOTER --->
-      <div class="container">
-        <div class="row">
-          <div class="footer-bg" >
-            <div class="col-md-4 col-xs-12">
-              <div class="shw-cs3"> Get in Touch </div>
-              <a href="mailto:hello@yoursite"> <div class="ftr-lnk"> hello@yoursite </div> </a>
-            </div>
-
-            <div class="col-md-4 col-xs-6">
-              <a target="_blank" href="http://twitter.com/"> <div class="ftr-lnk"> Twitter </div> </a>
-              <a target="_blank" href="http://instagram.com/"> <div class="ftr-lnk"> Instagram </div> </a>
-              <a target="_blank" href="http://pinterest.com/"> <div class="ftr-lnk"> Pinterest </div> </a>
-              <a target="_blank" href="http://dribbble.com/"> <div class="ftr-lnk"> Dribbble </div> </a>
-              <a target="_blank" href="http://linkedin.com/"> <div class="ftr-lnk"> Linkedin </div> </a>
-            </div>
-
-            <div class="col-md-4 col-xs-6">
-              <div class="ftr-lnk-on"> Home </div>
-              <a href="works.html"> <div class="ftr-lnk"> Works </div> </a>
-              <a href="logos.html"> <div class="ftr-lnk"> Logos </div> </a>
-              <a href="about.html"> <div class="ftr-lnk"> About & Contact </div> </a>
-              <a href="blog.html"> <div class="ftr-lnk"> Blog </div> </a>
-            </div>
-
+      <div class="footer">
+        <div class="contain">
+          <div class="col">
+            <h1>Navigation</h1>
+            <ul>
+              <li>Home</li>
+              <li>About</li>
+              <li>Works</li>
+              <li>Skills</li>
+              <li>Contact</li>
+            </ul>
           </div>
+          <div class="col">
+            <h1>Get in touch</h1>
+            <ul>
+              <li>Email</li>
+              <li>Cell</li>
+            </ul>
+          </div>
+          <div class="col social">
+            <h1>Social</h1>
+            <ul>
+              <li><i class="hovicon effect-4 fab fa-instagram"></i></li>
+              <li><i class="hovicon effect-4 fab fa-github-alt"></i></li>
+              <li><i class="hovicon effect-4 fab fa-linkedin-in"></i></li>
+            </ul>
+          </div>
+          <div class="clearfix"></div>
         </div>
       </div>
       <!--- THE END FOOTER --->
