--- a/index.html
+++ b/index.html
@@ -74,32 +74,8 @@
 
     <div class="jumbotron photo-me">
       <div class="container heading1">
-        <h1>I'm</h1>
       </div>
     </div>
-
-    <div class="jumbotron about">
-      <div class="col-sm heading2">
-        <h1>KYLE</h1>
-      </div>
-
-      <div class="smallHeader">
-        <span>- ABOUT ME</span>
-      </div>
-
-      <div class="col-sm-9 about-wrap">
-
-        <p>
-          <span class="bold">I'M A SKILLED WEB DEVELOPER AND PASSIONATE CREATIVE BASED IN SOUTH AFRICA INTERESTED IN CREATING WEBSITES BOTH BIG AND SMALL.</span>
-          <br />
-          I BELIEVE IN THE POWER OF GOOD DESIGN AND WELL THOUGHT FUNCTION AND THEIR ABILITY TO ENGAGE USERS, TRANSFORM EXPERIENCES AND PROVOKE AND INSPIRE INTERACTION.
-        </p>
-        <p>
-          WHEN I'M NOT TYPING AWAY AT MY COMPUTER I'M CREATING ART, WATCHING MR ROBOT OR TAKING MY DOG FOR A WALK.
-        </p>
-      </div>
-    </div>
-
 
     <!-- works
     ================================================== -->
@@ -110,34 +86,43 @@
           <h2>PROJECTS</h2>
         </div> <!-- end works-wrap -->
 
-        <div class="works-wrap-two">
-          <p>
-            I LOVE WHAT I DO THESE, ARE<br />
-            SOME OF MY LATEST PROJECTS.
-          </p>
-        </div> <!-- end works-wrap-two -->
-
         <!--- HOME PROJECTS --->
-        <div class="row">
-          <div class="col-md-3 col-xs-12">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3 col-xs-12">
 
-          </div>
+            </div>
 
-          <div class="prjct col-md-9 col-xs-12">
-            <div class="prjct-bg" >
-              <a href="singleproject.html"> <img src="images/d1.jpg" alt="" class="img-prjct"> </a>
-              <div class="prjct-wrt-right"> Project Title </div>
+            <div class="prjct col-md-9 col-xs-12">
+              <div class="prjct-bg" >
+                <a href="singleproject.html"> <img src="images/d1.jpg" alt="" class="img-prjct"> </a>
+                <div class="prjct-wrt-right"> Project Title </div>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="row">
-          <div class="prjct col-md-9 col-xs-12">
-            <div class="prjct-bg" >
-              <a href="singleproject.html"> <img src="images/d1.jpg" alt="" class="img-prjct"> </a>
-              <div class="prjct-wrt-left"> Project Title </div>
+          <div class="row">
+            <div class="prjct col-md-9 col-xs-12">
+              <div class="prjct-bg" >
+                <a href="singleproject.html"> <img src="images/d1.jpg" alt="" class="img-prjct"> </a>
+                <div class="prjct-wrt-left"> Project Title </div>
+              </div>
             </div>
           </div>
+
+          <div class="row">
+            <div class="col-md-3 col-xs-12">
+
+            </div>
+
+            <div class="prjct col-md-9 col-xs-12">
+              <div class="prjct-bg" >
+                <a href="singleproject.html"> <img src="images/d1.jpg" alt="" class="img-prjct"> </a>
+                <div class="prjct-wrt-right"> Project Title </div>
+              </div>
+            </div>
+          </div>
+
         </div>
         <!--- THE END HOME PROJECTS --->
 
