--- a/index.html
+++ b/index.html
@@ -69,22 +69,10 @@
 
     </div> <!-- end home-sec -->
 
-    <!-- about
-    ================================================== -->
-
-    <div class="jumbotron photo-me">
-      <div class="container heading1">
-      </div>
-    </div>
-
     <!-- works
     ================================================== -->
     <div id="site-content">
       <div  id="projects" class="works-sec">
-
-        <div class="container works-wrap">
-          <h2>PROJECTS</h2>
-        </div> <!-- end works-wrap -->
 
         <!--- HOME PROJECTS --->
         <div class="container">
@@ -95,8 +83,8 @@
 
             <div class="prjct col-md-9 col-xs-12">
               <div class="prjct-bg" >
-                <a href="singleproject.html"> <img src="images/d1.jpg" alt="" class="img-prjct"> </a>
-                <div class="prjct-wrt-right"> Project Title </div>
+                <a href="singleproject.html"> <img src="images/d3.png" alt="" class="img-prjct"> </a>
+                <div class="prjct-wrt-right"> èBRICKHOUSEè </div>
               </div>
             </div>
           </div>
@@ -104,8 +92,8 @@
           <div class="row">
             <div class="prjct col-md-9 col-xs-12">
               <div class="prjct-bg" >
-                <a href="singleproject.html"> <img src="images/d1.jpg" alt="" class="img-prjct"> </a>
-                <div class="prjct-wrt-left"> Project Title </div>
+                <a href="singleproject.html"> <img src="images/d5.png" alt="" class="img-prjct"> </a>
+                <div class="prjct-wrt-left"> èMODELEè </div>
               </div>
             </div>
           </div>
@@ -117,8 +105,8 @@
 
             <div class="prjct col-md-9 col-xs-12">
               <div class="prjct-bg" >
-                <a href="singleproject.html"> <img src="images/d1.jpg" alt="" class="img-prjct"> </a>
-                <div class="prjct-wrt-right"> Project Title </div>
+                <a href="singleproject.html"> <img src="images/d4.png" alt="" class="img-prjct"> </a>
+                <div class="prjct-wrt-right"> èCINEMATIXè </div>
               </div>
             </div>
           </div>
