added about section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
         </svg>
       </div>
 
+      <div class="col-md-3 about">
+        <p>
+          I'M KYLE KING, A DEVELOPER AND CREATIVE
+          BASED IN SOUTH AFRICA WITH AN INSATIABLE
+          APPETITE FOR KNOWLEDGE AND A CURIOSITY
+          FOR CODE.
+        </p>
+        <a class="smoothscroll" href="#contact">Say Hi!</a>
+      </div>
+
       <div class="container home-scroll">
         <a class="trail trail--bottom trail--animation">
           <i class="fas fa-angle-down  faa-bounce animated arrow2"></i>
