added underline effect for about

--- a/index.html
+++ b/index.html
@@ -55,20 +55,19 @@
 
       <div id="mainHeading" class="container heading">
         <div class="color-block"></div>
-        <h1 class="col-sm-12 heading-text"><span class="underline--magical">Hello</span>.</h1>
+        <h1 class="col-sm-12 heading-text"><span>Hello</span>.</h1>
 
         <svg width="80" height="60" viewBox="5 0 80 60"><path class="wave" fill="none" stroke="#000" stroke-width="4" stroke-linecap="round" d="M 0 37.5 c 7.684299348848887 0 7.172012725592294 -15 15 -15 s 7.172012725592294 15 15 15 s 7.172012725592294 -15 15 -15 s 7.172012725592294 15 15 15 s 7.172012725592294 -15 15 -15 s 7.172012725592294 15 15 15 s 7.172012725592294 -15 15 -15 s 7.172012725592294 15 15 15 s 7.172012725592294 -15 15 -15 s 7.172012725592294 15 15 15 s 7.172012725592294 -15 15 -15 s 7.172012725592294 15 15 15 s 7.172012725592294 -15 15 -15 s 7.172012725592294 15 15 15 s 7.172012725592294 -15 15 -15" />
         </svg>
       </div>
 
       <div class="col-md-3 about">
-        <p>
-          I'M KYLE KING, A DEVELOPER AND CREATIVE
-          BASED IN SOUTH AFRICA WITH AN INSATIABLE
-          APPETITE FOR KNOWLEDGE AND A CURIOSITY
-          FOR CODE.
-        </p>
-        <a class="smoothscroll" href="#contact">Say Hi!</a>
+        <h4>
+          I'm <a class="smoothscroll" href="#contact"><span class="underline--magical">Kyle King</span></a>, a developer and creative
+          based in South Africa with an insatiable
+          appetite for knowledge and a curiosity
+          for code.
+        </h4>
       </div>
 
       <div class="container home-scroll">
@@ -132,7 +131,8 @@
 
     <section class="jumbotron skills">
       <p>I AM CONSTANTLY WORKING TO IMPROVE MYSELF IN THE LATEST TECH AND<br />
-         DESIGN TRENDS. I'M CURRENTLY COMFORTABLE WITH THESE TECHNOLOGIES.</p>
+         DESIGN TRENDS. THROUGHOUT MY LEARNING JOURNEY I'VE COME INTO CONTACT<br />
+         WITH AND I'M CURRENTLY COMFORTABLE WITH SOME OF THESE TECHNOLOGIES.</p>
 
       <div class="col-sm skills-list">
         <div class="col-sm skills-list-2">
