fixed small issues

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           appetite for knowledge and a curiosity
           for code.
         </h4>
+        <a class="smoothscroll" href="#contact">Say Hi!</a>
       </div>
 
       <div class="container home-scroll">
@@ -115,7 +116,7 @@
             <div class="prjct col-md-9 col-xs-12">
               <div class="prjct-bg" >
                 <a href="singleproject.html"> <img src="images/d4.png" alt="" class="img-prjct"> </a>
-                <div class="prjct-wrt-right"> èCINEMATIXè </div>
+                <div class="prjct-wrt-right"> èFILMATHONè </div>
               </div>
             </div>
           </div>
