updated home page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="css/font-awesome-animation.min.css">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,800|Playfair+Display:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,800|Playfair+Display:400i" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <!-- favicons
   ================================================== -->
@@ -33,10 +33,10 @@
             <span>KYLE<br />KING</span>
           </a>
           <ul class="menu-left">
-            <li><a class="smoothscroll" href="#about">ABOUT</a></li>
-            <li><a class="smoothscroll" href="#projects">WORKS</a></li>
-            <li><a class="smoothscroll" href="#tech">SKILLS</a></li>
-            <li><a class="smoothscroll" href="#tech">CONTACT</a></li>
+            <li><a class="smoothscroll navbar__link" href="#about">ABOUT.</a></li>
+            <li><a class="smoothscroll navbar__link" href="#works">WORKS.</a></li>
+            <li><a class="smoothscroll navbar__link" href="#skills">SKILLS.</a></li>
+            <li><a class="smoothscroll navbar__link" href="#contact">CONTACT.</a></li>
           </ul>
         </nav>
       </div> <!-- end header-div -->
@@ -62,17 +62,22 @@
       </div>
 
       <div class="col-md-3 about">
-        <h4>
-          I'm <a class="smoothscroll" href="#contact"><span class="underline--magical">Kyle King</span></a>, a developer and creative
+        <h2>
+          I'm <a class="smoothscroll" href="#contact"><span class="underline--magical">Kyle King</span></a>
+        </h2>
+        <p>
+          I'm a developer and creative
           based in South Africa with an insatiable
           appetite for knowledge and a curiosity
           for code.
-        </h4>
-        <a class="smoothscroll" href="#contact">Say Hi!</a>
+        </p>
+        <h5>
+          <a class="smoothscroll" href="#contact">Say Hi!</a>
+        </h5>
       </div>
 
       <div class="container home-scroll">
-        <a class="trail trail--bottom trail--animation">
+        <a href="#footer" class="smoothscroll trail trail--bottom trail--animation">
           <i class="fas fa-angle-down  faa-bounce animated arrow2"></i>
         </a>
       </div>
@@ -82,7 +87,7 @@
     <!-- works
     ================================================== -->
     <div id="site-content">
-      <div  id="projects" class="works-sec">
+      <div  id="works" class="works-sec">
 
         <!--- HOME PROJECTS --->
         <div class="container">
@@ -130,7 +135,7 @@
     <!-- skills
     ================================================== -->
 
-    <section class="jumbotron skills">
+    <section id="skills" class="jumbotron skills">
       <p>I AM CONSTANTLY WORKING TO IMPROVE MYSELF IN THE LATEST TECH AND<br />
          DESIGN TRENDS. THROUGHOUT MY LEARNING JOURNEY I'VE COME INTO CONTACT<br />
          WITH AND I'M CURRENTLY COMFORTABLE WITH SOME OF THESE TECHNOLOGIES.</p>
@@ -151,12 +156,12 @@
           <i class="devicon-wordpress-plain"></i>
         </div>
       </div>
-
     </section> <!-- end skills-sec -->
+
 
     <!-- footer
     ================================================== -->
-    <footer id="site-footer" class="jumbotron footer-sec">
+    <footer id="footer" class="jumbotron footer-sec">
 
       <!--- FOOTER --->
       <div class="footer">
