--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
     ================================================== -->
     <div id="home" class="jumbotron home-sec section">
 
-      <div class="socials">
+      <!--<div class="socials">
         <i class="hovicon effect-4 fab fa-linkedin-in"></i>
         <i class="hovicon effect-4 fab fa-github-alt"></i>
         <i class="hovicon effect-4 fab fa-instagram"></i>
-      </div>
+      </div>-->
 
       <div id="mainHeading" class="container heading">
         <div class="color-block"></div>
@@ -62,14 +62,12 @@
       </div>
 
       <div class="col-md-3 home-about">
-        <h2>
-          I'm <a class="smoothscroll" href="#contact"><span class="underline--magical">Kyle King</span></a>
-        </h2>
+        <h3>
+          I'm <a class="smoothscroll" href="#contact"><span class="underline--magical">Kyle King</span></a> a developer and creative
+          based in South Africa.
+        </h3>
         <p>
-          I'm a developer and creative
-          based in South Africa with an insatiable
-          appetite for knowledge and a curiosity
-          for code.
+          I am always looking for exciting new projects. drop me a message and we can collaborate.
         </p>
 
         <h5>
@@ -81,7 +79,7 @@
             </svg>
           </a>
         </h5>
-        
+
       </div>
 
       <div class="container home-scroll">
@@ -100,8 +98,16 @@
         <!--- HOME PROJECTS --->
         <div class="container">
           <div class="row">
-            <div class="col-md-3 col-xs-12">
-
+            <div class="leftInfo col-md-3 col-xs-12">
+              <h5>
+                A vegan friendly restaurant website.
+              </h5>
+              <p>
+                Single page site built using HTML, CSS, Javascript and Jquery.
+              </p>
+              <span>
+                <a href="#">View Code</a>
+              </span>
             </div>
 
             <div class="prjct col-md-9 col-xs-12">
@@ -112,8 +118,20 @@
             </div>
           </div>
 
-          <div class="row">
-            <div class="prjct col-md-9 col-xs-12">
+          <div class="d-flex row">
+            <div class="order-md-2 rightInfo col-md-3 col-xs-12">
+              <h5>
+                A model agency and recruitment site.
+              </h5>
+              <p>
+                A multi-page website built using HTML, SCSS, Bootstrap, Javascript and Jquery for some animations.
+              </p>
+              <span>
+                <a href="#">View Code</a>
+              </span>
+            </div>
+
+            <div class="order-md-1 prjct col-md-9 col-xs-12">
               <div class="prjct-bg" >
                 <a href="singleproject.html"> <img src="images/d5.png" alt="" class="img-prjct"> </a>
                 <div class="prjct-wrt-left"> èMODELEè </div>
@@ -122,8 +140,16 @@
           </div>
 
           <div class="row">
-            <div class="col-md-3 col-xs-12">
-
+            <div class="leftInfo col-md-3 col-xs-12">
+              <h5>
+                A web app for viewing movie ratings and trailers.
+              </h5>
+              <p>
+                Built using React.js, SCSS, NPM and the TMDB API.
+              </p>
+              <span>
+                <a href="#">View Code</a>
+              </span>
             </div>
 
             <div class="prjct col-md-9 col-xs-12">
@@ -144,10 +170,37 @@
     ================================================== -->
 
     <section id="about" class="jumbotron about section">
-      <p>I AM CONSTANTLY WORKING TO IMPROVE MYSELF IN THE LATEST TECH AND<br />
-         DESIGN TRENDS. THROUGHOUT MY LEARNING JOURNEY I'VE COME INTO CONTACT<br />
-         WITH AND I'M CURRENTLY COMFORTABLE WITH SOME OF THESE TECHNOLOGIES.</p>
+      <div class="about-header col-sm-12">
+        <h2>
+          What I'm up to.
+        </h2>
+      </div>
 
+      <div class="row">
+        <div class="about-gif col-sm-3">
+
+        </div>
+        <div class="col-sm-6">
+          <h5>Who am I:</h5>
+          <p>
+            A self taught developer. <br />
+            Working in the finance industry originally, I quickly realised it was not for me.
+            That's when I discovered development. I've always been a tech nerd as well as an art lover, and it's made me a huge fan of the front-end.
+          </p>
+          <h5>Residing in:</h5>
+          <p>
+            Port Elizabeth, EC.
+          </p>
+          <h5>Working on:</h5>
+          <p>
+            Currently working freelance, while occasionally creating side projects or exploring the front-end.
+          </p>
+          <h5>In my spare time:</h5>
+          <p>
+            I enjoy painting, learning new tech (I'm currently discovering the capabilities of pyhton) and honestly just watching netflix (Mr.Robot is a favourite).
+          </p>
+        </div>
+      </div>
 
     </section> <!-- end about-sec -->
 
@@ -177,54 +230,21 @@
       </div>
     </section> <!-- end skills-sec -->
 
-    <!-- contact
-    ================================================== -->
-
-    <section id="contact" class="jumbotron contact section">
-      <p>I AM CONSTANTLY WORKING TO IMPROVE MYSELF IN THE LATEST TECH AND<br />
-         DESIGN TRENDS. THROUGHOUT MY LEARNING JOURNEY I'VE COME INTO CONTACT<br />
-         WITH AND I'M CURRENTLY COMFORTABLE WITH SOME OF THESE TECHNOLOGIES.</p>
-
-
-    </section> <!-- end contact-sec -->
-
 
     <!-- footer
     ================================================== -->
     <footer id="footer" class="jumbotron footer-sec">
 
-      <!--- FOOTER --->
       <div class="footer">
-        <div class="contain">
-          <div class="col">
-            <h1>Navigation</h1>
-            <ul>
-              <li>Home</li>
-              <li>About</li>
-              <li>Works</li>
-              <li>Skills</li>
-              <li>Contact</li>
-            </ul>
-          </div>
-          <div class="col">
-            <h1>Get in touch</h1>
-            <ul>
-              <li>Email</li>
-              <li>Cell</li>
-            </ul>
-          </div>
-          <div class="col social">
-            <h1>Social</h1>
-            <ul>
-              <li><i class="hovicon effect-4 fab fa-instagram"></i></li>
-              <li><i class="hovicon effect-4 fab fa-github-alt"></i></li>
-              <li><i class="hovicon effect-4 fab fa-linkedin-in"></i></li>
-            </ul>
-          </div>
-          <div class="clearfix"></div>
+
+        <div class="col social">
+          <ul>
+            <li><i class="hovicon effect-4 fab fa-instagram"></i></li>
+            <li><i class="hovicon effect-4 fab fa-github-alt"></i></li>
+            <li><i class="hovicon effect-4 fab fa-linkedin-in"></i></li>
+          </ul>
         </div>
       </div>
-      <!--- THE END FOOTER --->
 
     </footer> <!-- end footer-sec -->
   </div> <!-- end wrapper -->
