--- a/index.html
+++ b/index.html
@@ -236,16 +236,36 @@
     <footer id="footer" class="jumbotron footer-sec">
 
       <div class="footer">
+        <div class="row">
 
-        <div class="col social">
-          <ul>
-            <li><i class="hovicon effect-4 fab fa-instagram"></i></li>
-            <li><i class="hovicon effect-4 fab fa-github-alt"></i></li>
-            <li><i class="hovicon effect-4 fab fa-linkedin-in"></i></li>
-          </ul>
+          <div class="col-sm-3 social">
+            <ul>
+              <li><i class="hovicon effect-4 fab fa-instagram"></i></li>
+              <li><i class="hovicon effect-4 fab fa-github-alt"></i></li>
+              <li><i class="hovicon effect-4 fab fa-linkedin-in"></i></li>
+            </ul>
+          </div>
+
+          <div class="col-sm-3 email">
+            <h5>
+              <a class="link smoothscroll" href="#contact">Say Hi!
+                <svg class="underline">
+                  <path class="underline--path" d="">
+                    <animate class="underline--animation" attributeName="d" dur="0.3s" begin="indefinite" fill="freeze"></animate>
+                  </path>
+                </svg>
+              </a>
+            </h5>
+          </div>
+
+          <div class="col-sm-6 copyright">
+            <p>
+              © Kyle King 2019
+            </p>
+          </div>
+
         </div>
       </div>
-
     </footer> <!-- end footer-sec -->
   </div> <!-- end wrapper -->
   <!-- Java Script
