--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <link rel="stylesheet" href="css/main.css">
   <!-- favicons
   ================================================== -->
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="icon" href="crown1.png" type="image/x-icon">
 </head>
 
 <body data-spy="scroll" data-target="#navigation">
@@ -29,14 +29,14 @@
 
       <div class="header">
         <nav id="navigation">
-          <a class="smoothscroll header-logo logo" href="#top">
-            <span>KYLE<br />KING</span>
+          <a class="smoothscroll logo" href="#top">
+            <img src="images/logo.png" alt="logo" class="header-logo">
           </a>
           <ul class="menu-left">
             <li><a class="active smoothscroll" href="#home">HOME.</a></li>
             <li><a class="smoothscroll" href="#works">WORKS.</a></li>
-            <li><a class="smoothscroll" href="#about">ABOUT.</a></li>
             <li><a class="smoothscroll" href="#skills">SKILLS.</a></li>
+            <li><a class="smoothscroll" href="#about">ABOUT.</a></li>
           </ul>
         </nav>
       </div> <!-- end header-div -->
@@ -63,7 +63,7 @@
 
       <div class="col-md-3 home-about">
         <h3>
-          I'm <a class="smoothscroll" href="#contact"><span class="underline--magical">Kyle King</span></a> a developer and creative
+          I'm <a class="smoothscroll" href="#about"><span class="underline--magical">Kyle King</span></a> a developer and creative
           based in South Africa.
         </h3>
         <p>
@@ -166,6 +166,32 @@
       </div> <!-- end works-sec -->
     </div> <!-- end site-content -->
 
+        <!-- skills
+        ================================================== -->
+
+        <section id="skills" class="jumbotron skills section">
+          <p>I AM CONSTANTLY WORKING TO IMPROVE MYSELF IN THE LATEST TECH AND<br />
+             DESIGN TRENDS. THROUGHOUT MY LEARNING JOURNEY I'VE COME INTO CONTACT<br />
+             WITH AND I'M CURRENTLY COMFORTABLE WITH SOME OF THESE TECHNOLOGIES.</p>
+
+          <div class="col-sm skills-list">
+            <div class="col-sm skills-list-2">
+              <i class="fab fa-html5"></i>
+              <i class="fab fa-css3"></i>
+              <i class="fab fa-sass"></i>
+              <i class="fab fa-js-square"></i>
+              <i class="devicon-photoshop-plain"></i>
+            </div>
+            <div class="col-sm skills-list-1">
+              <i class="fab fa-react"></i>
+              <i class="fab fa-git"></i>
+              <i class="devicon-bootstrap-plain"></i>
+              <i class="devicon-jquery-plain"></i>
+              <i class="devicon-wordpress-plain"></i>
+            </div>
+          </div>
+        </section> <!-- end skills-sec -->
+
     <!-- about
     ================================================== -->
 
@@ -204,31 +230,6 @@
 
     </section> <!-- end about-sec -->
 
-    <!-- skills
-    ================================================== -->
-
-    <section id="skills" class="jumbotron skills section">
-      <p>I AM CONSTANTLY WORKING TO IMPROVE MYSELF IN THE LATEST TECH AND<br />
-         DESIGN TRENDS. THROUGHOUT MY LEARNING JOURNEY I'VE COME INTO CONTACT<br />
-         WITH AND I'M CURRENTLY COMFORTABLE WITH SOME OF THESE TECHNOLOGIES.</p>
-
-      <div class="col-sm skills-list">
-        <div class="col-sm skills-list-2">
-          <i class="fab fa-html5"></i>
-          <i class="fab fa-css3"></i>
-          <i class="fab fa-sass"></i>
-          <i class="fab fa-js-square"></i>
-          <i class="devicon-photoshop-plain"></i>
-        </div>
-        <div class="col-sm skills-list-1">
-          <i class="fab fa-react"></i>
-          <i class="fab fa-git"></i>
-          <i class="devicon-bootstrap-plain"></i>
-          <i class="devicon-jquery-plain"></i>
-          <i class="devicon-wordpress-plain"></i>
-        </div>
-      </div>
-    </section> <!-- end skills-sec -->
 
 
     <!-- footer
