added relavent links and fixed responsive issues

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Omnichief</title>
+  <title>Kyle Joshua King</title>
   <!-- mobile specific metas
   ================================================== -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -47,12 +47,6 @@
     ================================================== -->
     <div id="home" class="jumbotron home-sec section">
 
-      <!--<div class="socials">
-        <i class="hovicon effect-4 fab fa-linkedin-in"></i>
-        <i class="hovicon effect-4 fab fa-github-alt"></i>
-        <i class="hovicon effect-4 fab fa-instagram"></i>
-      </div>-->
-
       <div id="mainHeading" class="container heading">
         <div class="color-block"></div>
         <h1 class="col-sm-12 heading-text"><span>Hello</span>.</h1>
@@ -71,7 +65,7 @@
         </p>
 
         <h5>
-          <a class="link smoothscroll" href="#contact">Say Hi!
+          <a class="link" href="mailto:kylek918@icloud.com?Subject=Hey%20there">Say Hi!
             <svg class="underline">
               <path class="underline--path" d="">
                 <animate class="underline--animation" attributeName="d" dur="0.3s" begin="indefinite" fill="freeze"></animate>
@@ -95,6 +89,10 @@
     <div id="site-content">
       <div  id="works" class="works-sec section">
 
+        <div class="subHeading col-xs-12">
+          <span>works</span>
+        </div>
+
         <!--- HOME PROJECTS --->
         <div class="container">
           <div class="row">
@@ -106,7 +104,7 @@
                 Single page site built using HTML, CSS, Javascript and Jquery.
               </p>
               <span>
-                <a href="#">View Code</a>
+                <a href="https://github.com/King-Kyle/The-BrickHouse" target="_blank">View Code</a>
               </span>
             </div>
 
@@ -127,7 +125,7 @@
                 A multi-page website built using HTML, SCSS, Bootstrap, Javascript and Jquery for some animations.
               </p>
               <span>
-                <a href="#">View Code</a>
+                <a href="https://github.com/King-Kyle/modele" target="_blank">View Code</a>
               </span>
             </div>
 
@@ -148,7 +146,7 @@
                 Built using React.js, SCSS, NPM and the TMDB API.
               </p>
               <span>
-                <a href="#">View Code</a>
+                <a href="https://github.com/King-Kyle/Filmathon" target="_blank">View Code</a>
               </span>
             </div>
 
@@ -170,9 +168,12 @@
         ================================================== -->
 
         <section id="skills" class="jumbotron skills section">
-          <p>I AM CONSTANTLY WORKING TO IMPROVE MYSELF IN THE LATEST TECH AND<br />
-             DESIGN TRENDS. THROUGHOUT MY LEARNING JOURNEY I'VE COME INTO CONTACT<br />
-             WITH AND I'M CURRENTLY COMFORTABLE WITH SOME OF THESE TECHNOLOGIES.</p>
+          <div class="col-sm">
+            <p>I AM CONSTANTLY WORKING TO IMPROVE MYSELF IN THE LATEST TECH AND<br />
+               DESIGN TRENDS. THROUGHOUT MY LEARNING JOURNEY I'VE COME INTO CONTACT<br />
+               WITH AND I'M CURRENTLY COMFORTABLE WITH SOME OF THESE TECHNOLOGIES.</p>
+          </div>
+
 
           <div class="col-sm skills-list">
             <div class="col-sm skills-list-2">
@@ -206,22 +207,22 @@
         <div class="about-gif col-sm-3">
 
         </div>
-        <div class="col-sm-6">
-          <h5>Who am I:</h5>
+        <div class="about-col col-sm-6">
+          <span>Who am I:</span>
           <p>
             A self taught developer. <br />
             Working in the finance industry originally, I quickly realised it was not for me.
             That's when I discovered development. I've always been a tech nerd as well as an art lover, and it's made me a huge fan of the front-end.
           </p>
-          <h5>Residing in:</h5>
+          <span>Residing in:</span>
           <p>
             Port Elizabeth, EC.
           </p>
-          <h5>Working on:</h5>
+          <span>Working on:</span>
           <p>
             Currently working freelance, while occasionally creating side projects or exploring the front-end.
           </p>
-          <h5>In my spare time:</h5>
+          <span>In my spare time:</span>
           <p>
             I enjoy painting, learning new tech (I'm currently discovering the capabilities of pyhton) and honestly just watching netflix (Mr.Robot is a favourite).
           </p>
@@ -237,35 +238,37 @@
     <footer id="footer" class="jumbotron footer-sec">
 
       <div class="footer">
-        <div class="row">
 
-          <div class="col-sm-3 social">
-            <ul>
-              <li><i class="hovicon effect-4 fab fa-instagram"></i></li>
-              <li><i class="hovicon effect-4 fab fa-github-alt"></i></li>
-              <li><i class="hovicon effect-4 fab fa-linkedin-in"></i></li>
-            </ul>
+          <div class="row">
+            <div class="col-md-6 social">
+              <ul>
+                <a href="https://codepen.io/JustKyle/" target="_blank"><li><i class="hovicon effect-4 fab fa-codepen"></i></li></a>
+                <a href="https://github.com/King-Kyle" target="_blank"><li><i class="hovicon effect-4 fab fa-github-alt"></i></li></a>
+                <a href="https://www.linkedin.com/in/kyle-king-19660199/" target="_blank"><li><i class="hovicon effect-4 fab fa-linkedin-in"></i></li></a>
+              </ul>
+            </div>
+
+            <div class="col-md-6 email">
+              <h5>
+                <a class="link" href="mailto:kylek918@icloud.com?Subject=Hey%20there">Say Hi!
+                  <svg class="underline">
+                    <path class="underline--path" d="">
+                      <animate class="underline--animation" attributeName="d" dur="0.3s" begin="indefinite" fill="freeze"></animate>
+                    </path>
+                  </svg>
+                </a>
+              </h5>
+            </div>
+
+            <div class="col-sm-12 copyright">
+              <p>
+                © Kyle King 2019
+              </p>
+            </div>
           </div>
 
-          <div class="col-sm-3 email">
-            <h5>
-              <a class="link smoothscroll" href="#contact">Say Hi!
-                <svg class="underline">
-                  <path class="underline--path" d="">
-                    <animate class="underline--animation" attributeName="d" dur="0.3s" begin="indefinite" fill="freeze"></animate>
-                  </path>
-                </svg>
-              </a>
-            </h5>
-          </div>
 
-          <div class="col-sm-6 copyright">
-            <p>
-              © Kyle King 2019
-            </p>
-          </div>
 
-        </div>
       </div>
     </footer> <!-- end footer-sec -->
   </div> <!-- end wrapper -->
